feat: major security, performance and deployment improvements (v2.0.0)
Security Enhancements:
- Fix IDOR vulnerability in DELETE endpoint with user validation
- Implement DTOs (HabitResponse, UserResponse) to prevent data exposure
- Add comprehensive input validations (@Size, @Email, @PastOrPresent)
- Implement time travel prevention (no future dates, startDate validation)
- Add resource limits (100 habits per user)
- Externalize all credentials to environment variables
- Disable SQL logging by default (production-safe)

Performance Optimizations:
- Add pagination support to habit listing endpoints
- Implement JOIN FETCH to eliminate N+1 queries
- Configure query timeout (5s) and connection timeout (10s)
- Optimize streak calculations to consider habit startDate

New Features:
- Add UPDATE habit endpoint (PUT /api/habits/{id})
- Add DELETE habit endpoint with soft delete (DELETE /api/habits/{id})
- Add ARCHIVE habit endpoint (PATCH /api/habits/{id}/archive)
- Add /api/me endpoint for authenticated user info
- Soft delete implementation with deletedAt field

Deployment & Monitoring:
- Add Dockerfile with multi-stage build for production
- Add Spring Boot Actuator for health checks (/actuator/health)
- Add Swagger/OpenAPI documentation (/swagger-ui.html)
- Create deployment guide (DEPLOY.md)
- Create .env.example for configuration reference
- Update frontend URL to https://bonsaai-front.vercel.app

Technical Improvements:
- All configurations now use environment variables
- Production-ready application.properties
- Security configuration updated for public endpoints
- Repository optimized queries with pagination support

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>